fix: поправить настройки БД

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ datasource.driverClassName=org.h2.Driver
 generate_statistics=true
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5344/Schema
+spring.datasource.url=jdbc:postgresql://localhost:5344/postgres
 spring.datasource.username=test
 spring.datasource.password=test
