--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.sql.init.mode=always
 spring.main.allow-circular-references=true
 server.error.include-message=always
 server.error.include-binding-errors=always
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
