test: тест репозитория

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 hibernate.show_sql=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+Spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
