--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 Spring.jpa.show-sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#spring.datasource.username=${POSTGRES_USER}
+#spring.datasource.password=${POSTGRES_PASSWORD}
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-#spring.datasource.username=postgresshareit
-#spring.datasource.password=postgresshareit
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=postgresshareit
+spring.datasource.password=postgresshareit
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
